--- a/src/sites/md/08-3-javascript-hex-data.mdx
+++ b/src/sites/md/08-3-javascript-hex-data.mdx
@@ -58,6 +58,9 @@ import XORCell from "../../components/XORCell"
     1. `16`
     1. `A0`
 
+    Können Sie das auch in die andere Richtung berechnen? Suchen Sie einen Weg
+    wie man das umkehren kann.
+
     </Example>
 
     <section>
