--- a/src/sites/md/08-2-javascript-binary-data.mdx
+++ b/src/sites/md/08-2-javascript-binary-data.mdx
@@ -1,6 +1,7 @@
 import Chapter from "../../components/Chapter"
 import Example from "../../components/Example"
 import VSpace from "../../components/VSpace"
+import Katex from "../../components/Katex"
 
 import HexCell from "../../components/HexCell"
 import XORCell from "../../components/XORCell"
@@ -98,6 +99,38 @@ import XORCell from "../../components/XORCell"
     1. Wieso ist diese Art der Verschlüsselung praktisch für den Computer?
     
     </Example>
+
+    <section>
+
+### Ins vom Binär ins Hexadezimalsystem umrechnen
+
+    Das Binärsystem funktioniert zur Basis 2 statt wie gewohnt zur Basis 10.
+    Die Umrechnung vom Binär- zum Dezimalsystem ist sehr simpel, Sie können
+    diesem Schema folgen.
+
+    Jede Stelle im Binärsystem ist eine Ziffer mit dem Wert `0` oder `1`. Sie
+    multiplizieren dann jede Ziffer mit der jeweiligen Stelle
+
+    <div style={{display:"flex", justifyContent: "center"}}>
+    <Katex>
+    {String.raw`{1001} \rightarrow 1 \cdot 2^3 + 0 \cdot 2^2 + 0 \cdot 2^1 + 1
+    \cdot 2^0 = 9` }
+    </Katex>
+    </div>
+
+    Berechnen Sie die jeweiligen dezimaldarstellungen von den gegebenen
+    Binärzahlen:
+
+    1. `10010`
+    1. `11010`
+    1. `10011`
+    1. `10100`
+    1. `110110`
+
+    Können Sie das auch in die andere Richtung berechnen? Suchen Sie einen Weg
+    wie man das umkehren kann.
+
+    </section>
 
 </Chapter>
 
