--- a/src/sites/md/08-2-javascript-binary-data.mdx
+++ b/src/sites/md/08-2-javascript-binary-data.mdx
@@ -102,7 +102,7 @@ import XORCell from "../../components/XORCell"
 
     <section>
 
-### Ins vom Binär ins Hexadezimalsystem umrechnen
+### Vom Binär ins Dezimalsystem umrechnen
 
     Das Binärsystem funktioniert zur Basis 2 statt wie gewohnt zur Basis 10.
     Die Umrechnung vom Binär- zum Dezimalsystem ist sehr simpel, Sie können
