Added hex chapter.

--- a/src/sites/md/08-3-javascript-hex-data.mdx
+++ b/src/sites/md/08-3-javascript-hex-data.mdx
@@ -5,6 +5,8 @@ import Katex from "../../components/Katex"
 
 import HexCell from "../../components/HexCell"
 import XORCell from "../../components/XORCell"
+import ImgCell from "../../components/ImgCell"
+import HexImgCell from "../../components/HexImgCell"
 
 <Chapter>
 
@@ -44,7 +46,8 @@ import XORCell from "../../components/XORCell"
 
     <div style={{display: 'flex', justifyContent: 'center'}}>
     <Katex >
-    {String.raw`{A3} \rightarrow 10 \cdot 16^1 + 3 \cdot 16^0 = 163` }
+    {String.raw`{A3_{\texttt{hex}}} \rightarrow 10 \cdot 16^1 + 3 \cdot 16^0 =
+    163_\texttt{dec}` }
     </Katex>
     </div>
 
@@ -93,6 +96,59 @@ import XORCell from "../../components/XORCell"
     dann ein Video von 30 Sekunden bei einer Auflösung von 1980x1200 Pixeln?
 
     </Example>
+
+    <section>
+
+### Bitmapformat und Hexadezimaldarstellung
+
+    Wir betrachten eine Repräsentation vom Bitmapformat wie es im
+    Computerspeicher aussehen könnte. Hier ist jeweils 1 Pixel mit 4
+    `Hex`-Werten kodiert und dann kommt gleich der nächste Pixel. Wenn wir den
+    ersten Pixel einfach Rot darstellen möchten, dann würde das im Speicher so
+    aussehen: `FF 00 00 FF`. Die ersten zwei Stellen sind für den Rot-Kanal,
+    dann folgen Grün- und Blau-Kanal. Am Ende kommt noch der Alpha-Kanal, der
+    sagt wie sehr ein Pixel angezeigt werden soll, der sollte also immer auf
+    `FF` stehen. Wenn Sie die Farbe ein wenig dunkler haben möchten, dann
+    können Sie dort einen kleineren Wert verwenden.
+
+    </section>
+
+    <Example title="Aufgabe: Bild von Hexcodes erzeugen">
+
+    Diese Zelle liest auf der linken Seite einen Hexcode ein, und erstellt
+    damit ein quadratisches Pixelbild. Versuchen Sie verschiedene Bilder zu
+    erzeugen.
+
+    <HexImgCell />
+
+    1. 1x1 Pixel grün
+    1. 1x1 Pixel gelb
+    1. 2x2 Pixel und die Farben rot, gelb, cyan und schwarz sollen drin
+       vorkommen
+    1. 3x3 Pixel wo die erste Zeile schwarz, die zweite grün und die dritte rot
+       und blau ist.
+    1. 3x3 Pixel wie die erste Spalte orange, die zweite dunkelgrün und die
+       dritte pink ist.
+    1. 4x4 Pixel, mit ihren Lieblingsfarben
+
+    </Example>
+
+    <section>
+    ### Verknüpfen der Informationen
+
+    Wir können für das Bitmapschema auch einfach den ASCII-Code statt dem
+    Hexwert als Eingabe nehmen. Genau das können Sie in der nächsten Zelle
+    machen. Da wird von jedem Zeichen der ASCII-Wert genommen und das ist dann
+    der Wert für den Farbkanal beim aktuellen Pixel.
+
+    Spielen Sie mit der nächsten Codezelle herum und versuchen Sie die Aufgaben
+    von vorhin nachzustellen, oder eigene spannende Aufgaben zu erstellen.
+
+    <ImgCell />
+
+    </section>
+
+
 
 </Chapter>
 
