Remove node from installation.

--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -51,13 +51,14 @@ ausgewählt haben, ansonsten können Sie die Installation garnicht durchführen.
     brew install --cask google-chrome
     ```
 
-    ### Node.js (Javascript Runtime)
+    {/* ### Node.js (Javascript Runtime)
 
     Wir werden später viel mit Javascript programmieren, dafür werden wir dann `nodejs` brauchen. Wir brauchen `nodejs` aber bereits jetzt um verschiedene Teile des Projektes zum laufen zu bringen. `Nodejs` kann am besten mit dem folgenden Befehl installiert werden.
 
     ```bash
     brew install node
     ```
+    */}
 
     ### Docker-Desktop
 
@@ -97,13 +98,14 @@ ausgewählt haben, ansonsten können Sie die Installation garnicht durchführen.
     winget install -e --id Google.Chrome
     ```
 
-    ### Node.js (Javascript Runtime)
+    {/* ### Node.js (Javascript Runtime)
 
     Wir werden später viel mit Javascript programmieren, dafür werden wir dann `nodejs` brauchen. Wir brauchen `nodejs` aber bereits jetzt um verschiedene Teile des Projektes zum laufen zu bringen. `Nodejs` kann am besten mit dem folgenden Befehl installiert werden.
 
     ```bash
     winget install -e --id OpenJS.NodeJS
     ```
+    */}
 
     ### Docker-Desktop
 
