--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -74,6 +74,12 @@ ausgewählt haben, ansonsten können Sie die Installation garnicht durchführen.
 
     öffnen Sie das Startmenu und suchen Sie nach `cmd`. Mit einem Rechtsklick auf das Programm, können Sie dann `Als Administrator öffnen` auswählen. Dann sollte ein neues Fenster aufgehen, wo Sie Befehle ausführen können.
 
+    Damit Sie `winget` sicher haben, und dieses auch auf der neusten Version ist, können Sie den folgenden Befehl laufen lassen.
+
+    ```bash
+    Add-AppxPackage -Path 'https://github.com/microsoft/winget-cli/releases/download/v1.8.1911/Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle' -ForceApplicationShutdown
+    ```
+
     ### VSCode
 
     Als erstes installieren wir VSCode. Das ist unser Editor den wir zum schreiben und editieren von Code verwenden werden. Um VSCode zu installieren, geben Sie den folgenden Befehl ein, und drücken Sie anschliessend auf `Enter`. Stellen Sie sicher das der Befehl richtig geschrieben ist, ansonsten wird es nicht funktionieren.
