Add missing section for better formatting.

--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -180,6 +180,8 @@ Sie können dennoch einige Dinge davon übernehmen.
 
 ## Webserver starten
 
+<section>
+
 Moderne Webseiten brauchen jeweils einen Webserver um zu funktionieren. Dafür
 verwenden wir `Docker` zusammen mit `nodejs`. Damit wir `Docker` direkt
 verwenden können, müssen wir eine **Erweiterung** in `VSCode` installieren.
@@ -197,6 +199,8 @@ passieren ganz viele magische Dinge, und beim ersten Mal dauert das auch eine
 Weile. Wenn der ganze Prozess aber abgeschlossen ist, dann verwenden wir alle
 das genau gleiche Projekt-Setup und sollten dannach keine weiteren Probleme mehr
 haben.
+
+</section>
 
 <Example title="Auftrag: Mit dem Container kommunizieren">
   Wenn Sie mit dem Container kommunizieren möchten, müssen Sie das über ein
