--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -132,7 +132,7 @@ Installieren Sie alle Programme die oben aufgezählt sind. Wenn Sie alles
 installiert haben, öffnen Sie `VSCode` und erstellen Sie ein neues Projekt um zu
 testen ob alles richtig installiert ist.
 
-Drücken Sie dafür `CRTL + SHIFT + P` und tippen Sie `clone`. Wählen Sie dann
+Drücken Sie dafür `CTRL + SHIFT + P` und tippen Sie `clone`. Wählen Sie dann
 `Git: Clone` aus, und klonen Sie das folgende Repository zu Ihnen auf den
 Computer.
 
