--- a/src/sites/md/01-0-svg.mdx
+++ b/src/sites/md/01-0-svg.mdx
@@ -1,6 +1,11 @@
 import Chapter from "../../components/Chapter"
 import FiddleSVG from "../../components/FiddleSVG"
 import Example from "../../components/Example"
+import Presentation, {
+  Slide,
+  Basement,
+  Fragment,
+} from "../../components/Reveal"
 
 <Chapter>
 
