--- a/src/sites/md/03-5-css-layout.mdx
+++ b/src/sites/md/03-5-css-layout.mdx
@@ -55,4 +55,20 @@ in dem folgenden Selektor an: `.navbar > li > a`
 
 </Example>
 
+<Fiddle
+  html={`<div class="my-container">
+  <div class="my-box">box</div>
+</div>`}
+  css={`
+    .my-box {
+      background-color: green;
+      width: 100px;
+      height: 100px;
+      margin: 0px;
+      padding: 20px;
+      border: 2px dotted red;
+    }
+  `}
+/>
+
 </Chapter>
