Fixed fiddle import.

--- a/src/sites/md/03-5-css-layout.mdx
+++ b/src/sites/md/03-5-css-layout.mdx
@@ -1,6 +1,7 @@
 import { Link } from "react-router-dom"
 import Chapter from "../../components/Chapter"
 import Example from "../../components/Example"
+import Fiddle from "../../components/Fiddle"
 
 <Chapter>
 
