Fixed base url for img.

--- a/src/sites/md/04-0-git.mdx
+++ b/src/sites/md/04-0-git.mdx
@@ -38,7 +38,7 @@ Projekten zu arbeiten.
     <Slide>
       ### Wie funktioniert Versionskontrolle?
       <Basement>
-        <img alt="Git Graph" src="/git-graph.png" />
+        <img alt="Git Graph" src="/gym-inf/git-graph.png" />
       </Basement>
       <Basement>
       <ul>
