--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -219,14 +219,16 @@ scrollen ein wenig nach unten.
 
 </section>
 
-<Example title="Auftrag: Mit dem Container kommunizieren">
-  Wenn Sie mit dem Container kommunizieren möchten, müssen Sie das über ein
-  Terminal machen. Das Terminal kann am Anfang ein wenig einschüchternd wirken,
-  es ist aber sehr einfach zu bedienen, und auch sehr mächtig. Sie müssen in der
-  Regel nur einfache Befehle eingeben, und wenn etwas nicht funktionieren
-  sollte, dann bekommen Sie eine ausführliche Fehlermeldung. Wenn Sie aber alles
-  richtig geschrieben haben, dann sollte auch alles ohne Probleme funktionieren.
+## Container
 
+Wenn Sie mit dem Container kommunizieren möchten, müssen Sie das über ein
+Terminal machen. Das Terminal kann am Anfang ein wenig einschüchternd wirken, es
+ist aber sehr einfach zu bedienen, und auch sehr mächtig. Sie müssen in der
+Regel nur einfache Befehle eingeben, und wenn etwas nicht funktionieren sollte,
+dann bekommen Sie eine ausführliche Fehlermeldung. Wenn Sie aber alles richtig
+geschrieben haben, dann sollte auch alles ohne Probleme funktionieren.
+
+<Example title="Auftrag: Mit dem Container kommunizieren">
 Um ein neues Terminal zu öffnen, tippen Sie `CTRL + SHIFT + P` und suchen Sie
 nach dem Befehl `Terminal: Create New Terminal`. Dann sollte am unteren Rand ein
 neues Terminal aufgehen. Dort können Sie den Befehl `npm run dev` eintippen und
@@ -241,16 +243,17 @@ eigene Webseite anzeigen lassen: [http://localhost:5173/](http://localhost:5173)
 
 Bis jetzt haben Sie das Projekt einfach zum laufen gebracht, aber noch nichts
 von dem Inhalt geändert. Da es Ihr Projekt ist, soll die Webseite auch etwas
-über Sie aussagen. Suchen Sie also nach der Datei `index.html` und fügen Sie
-dort Ihren Namen ein. Speichern Sie dann mit `CTRL + S` und schauen Sie sich das
-Resultat im Webbrowser an.
+über Sie aussagen.
 
 <Example title="Auftrag: Erste Version">
+  Suchen Sie also nach der Datei `index.html` und fügen Sie
+  dort Ihren Namen ein. Speichern Sie dann mit `CTRL + S` und schauen Sie sich das
+  Resultat im Webbrowser an.
   Herzlichen Glückwunsch! Mit dem Einfügen von Ihrem Namen, haben Sie die erste
   eigene Version von Ihrem Projekt erstellt. Das möchten wir auch so als Version
   festhalten und mithilfe von `git` einen sogenannten `commit` erstellen.
   Fügen Sie als erstes beim `git graph` Ihren Benutzer von Github ein, indem Sie auf das Einstellungssymbol (Zahnrad) drücken.
-  Stagen Sie dann die `index.html` Datei. Schreiben Sie eine `commit-message`und drücken Sie auf `Commit`.
+  Stagen Sie dann die `index.html` Datei. Schreiben Sie eine `commit-message` und drücken Sie auf `Commit`.
 
 </Example>
 
@@ -258,6 +261,6 @@ Resultat im Webbrowser an.
 
 Sie finden im
 [`README.md`](https://github.com/gymmu/00-demo/blob/main/README.md) weitere
-Aufgaben die Sie beim erstellen einer Webseite anleiten.
+Aufgaben die Sie beim Erstellen einer Webseite anleiten.
 
 </Chapter>
